<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="recent_task_option_pin">Pin</string>
    <string name="recent_task_option_freeform">Freeform</string>
    <string name="recent_task_option_desktop">Desktop</string>
    <string name="recent_task_option_external_display">Move to external display</string>
    <string name="recent_task_option_remove_task">Clear</string>
    <string name="recent_task_desktop">Desktop</string>
    <string name="recents_empty_message">No recent items</string>
    <string name="accessibility_app_usage_settings">App usage settings</string>
    <string name="recents_clear_all">Clear all</string>
    <string name="recents_back" translatable="false">Back</string>
    <string name="add_desk_button_content_description">Add new desk</string>
    <string name="accessibility_recent_apps">Recent apps</string>
    <string name="task_contents_description_with_remaining_time"><xliff:g id="task_description" example="GMail">%1$s</xliff:g>, <xliff:g id="remaining_time" example="7 minutes left today">%2$s</xliff:g></string>
    <string name="shorter_duration_less_than_one_minute">&lt; 1 minute</string>
    <string name="time_left_for_app"><xliff:g id="time" example="7 minutes">%1$s</xliff:g> left today</string>
    <string name="title_app_suggestions">App suggestions</string>
    <string name="all_apps_prediction_tip">Your predicted apps</string>
    <string name="gesture_tutorial_close_button_content_description" translatable="false">Close</string>
    <string name="hotseat_edu_title_migrate">Get app suggestions on the bottom row of your Home screen</string>
    <string name="hotseat_edu_title_migrate_landscape">Get app suggestions on favorites row of your Home screen</string>
    <string name="hotseat_edu_message_migrate">Easily access your most-used apps right on the Home screen. Suggestions will change based on your routines. Apps on the bottom row will move up to your Home screen. </string>
    <string name="hotseat_edu_message_migrate_landscape">Easily access your most-used apps right on the Home screen. Suggestions will change based on your routines. Apps in favorites row will move to your Home screen. </string>
    <string name="hotseat_edu_accept">Get app suggestions</string>
    <string name="hotseat_edu_dismiss">No thanks</string>
    <string name="hotseat_prediction_settings">Settings</string>
    <string name="hotseat_auto_enrolled">Most-used apps appear here, and change based on routines</string>
    <string name="hotseat_tip_no_empty_slots">Drag apps off the bottom row to get app suggestions</string>
    <string name="hotseat_tip_gaps_filled">App suggestions added to empty space</string>
    <string name="hotsaet_tip_prediction_enabled">App suggestions enabled</string>
    <string name="hotsaet_tip_prediction_disabled">App suggestions are disabled</string>
    <string name="hotseat_prediction_content_description">Predicted app: <xliff:g id="title" example="Chrome">%1$s</xliff:g></string>
    <string name="gesture_tutorial_title">Gesture Navigation Tutorial</string>
    <string name="gesture_tutorial_rotation_prompt_title">Rotate your device</string>
    <string name="gesture_tutorial_rotation_prompt">Please rotate your device to complete the gesture navigation tutorial</string>
    <string name="back_gesture_feedback_swipe_too_far_from_edge">Make sure you swipe from the far-right or far-left edge</string>
    <string name="back_gesture_feedback_cancelled">Make sure you swipe from the right or left edge to the middle of the screen and let go</string>
    <string name="back_gesture_feedback_complete_with_overview_follow_up">You learned how to swipe from the right to go back. Next up, learn how to switch apps.</string>
    <string name="back_gesture_feedback_complete_with_follow_up">You completed the go back gesture. Next up, learn how to switch apps.</string>
    <string name="back_gesture_feedback_complete_without_follow_up">You completed the go back gesture</string>
    <string name="back_gesture_feedback_swipe_in_nav_bar">Make sure you don\'t swipe too close to the bottom of the screen</string>
    <string name="back_gesture_tutorial_confirm_subtitle">To change the sensitivity of the back gesture, go to Settings</string>
    <string name="back_gesture_intro_title">Swipe to go back</string>
    <string name="back_gesture_intro_subtitle">To go back to the last screen, swipe from the left or right edge to the middle of the screen.</string>
    <string name="back_gesture_tutorial_title">Go back</string>
    <string name="back_gesture_tutorial_subtitle">Swipe from the left or right edge to the middle of the screen</string>
    <string name="home_gesture_feedback_swipe_too_far_from_edge">Make sure you swipe up from the bottom edge of the screen</string>
    <string name="home_gesture_feedback_overview_detected">Make sure you don\'t pause before letting go</string>
    <string name="home_gesture_feedback_wrong_swipe_direction">Make sure you swipe straight up</string>
    <string name="home_gesture_feedback_complete_with_follow_up">You completed the go home gesture. Next up, learn how to go back.</string>
    <string name="home_gesture_feedback_complete_without_follow_up">You completed the go home gesture</string>
    <string name="home_gesture_intro_title">Swipe to go home</string>
    <string name="home_gesture_intro_subtitle">Swipe up from the bottom of your screen. This gesture always takes you to the Home screen.</string>
    <string name="home_gesture_tutorial_title">Go home</string>
    <string name="home_gesture_tutorial_subtitle">Swipe up from the bottom of your screen</string>
    <string name="home_gesture_tutorial_success">Great job!</string>
    <string name="overview_gesture_feedback_swipe_too_far_from_edge">Make sure you swipe up from the bottom edge of the screen</string>
    <string name="overview_gesture_feedback_home_detected">Try holding the window for longer before releasing</string>
    <string name="overview_gesture_feedback_wrong_swipe_direction">Make sure you swipe straight up, then pause</string>
    <string name="overview_gesture_feedback_complete_with_follow_up">You learned how to use gestures. To turn off gestures, go to Settings.</string>
    <string name="overview_gesture_feedback_complete_without_follow_up">You completed the switch apps gesture</string>
    <string name="overview_gesture_intro_title">Swipe to switch apps</string>
    <string name="overview_gesture_intro_subtitle">To switch between apps, swipe up from the bottom of your screen, hold, then release.</string>
    <string name="overview_gesture_tutorial_title">Switch apps</string>
    <string name="overview_gesture_tutorial_subtitle">Swipe up from the bottom of your screen, hold, then release</string>
    <string name="overview_gesture_tutorial_success">Well done!</string>
    <string name="assistant_gesture_tutorial_playground_title" translatable="false">Tutorial: Assistant</string>
    <string name="assistant_gesture_tutorial_playground_subtitle" translatable="false">Try swiping diagonally from a bottom corner of the screen</string>
    <string name="assistant_gesture_feedback_swipe_too_far_from_corner" translatable="false">Make sure you swipe from a bottom corner of the screen.</string>
    <string name="assistant_gesture_feedback_swipe_not_diagonal" translatable="false">Make sure you swipe diagonally.</string>
    <string name="assistant_gesture_feedback_swipe_not_long_enough" translatable="false">Try swiping further.</string>
    <string name="sandbox_mode_title" translatable="false">Sandbox Mode</string>
    <string name="sandbox_mode_subtitle" translatable="false">Try any navigation gesture</string>
    <string name="sandbox_mode_back_gesture_feedback_successful" translatable="false">Back gesture successful</string>
    <string name="sandbox_mode_assistant_gesture_feedback_successful" translatable="false">Assistant gesture successful</string>
    <string name="sandbox_mode_home_gesture_feedback_successful" translatable="false">Home gesture successful</string>
    <string name="sandbox_mode_overview_gesture_feedback_successful" translatable="false">Overview gesture successful</string>
    <string name="sandbox_mode_back_gesture_feedback_swipe_too_far_from_edge" translatable="false">Make sure you swipe from the left/right edge of the screen</string>
    <string name="gesture_tutorial_confirm_title">All set</string>
    <string name="gesture_tutorial_action_button_label">Done</string>
    <string name="gesture_tutorial_action_button_label_settings">Settings</string>
    <string name="gesture_tutorial_try_again">Try again</string>
    <string name="gesture_tutorial_nice">Nice!</string>
    <string name="gesture_tutorial_step">Tutorial <xliff:g id="current">%1$d</xliff:g>/<xliff:g id="total">%2$d</xliff:g></string>
    <string name="allset_title">All set!</string>
    <string name="allset_hint">Swipe up to go home</string>
    <string name="allset_button_hint">Tap the home button to go to your home screen</string>
    <string name="allset_description_generic">You\u2019re ready to start using your <xliff:g id="device" example="Pixel 6">%1$s</xliff:g></string>
    <string name="allset_description_fallback">You\u2019re ready to start using your device</string>
    <string name="allset_navigation_settings"><annotation id="link">System navigation settings</annotation></string>
    <string name="allset_title_expressive">Your <xliff:g id="device" example="Pixel 9">%1$s</xliff:g> is \nready!</string>
    <string name="allset_title_expressive_fallback">Your device is \nready!</string>
    <string name="allset_subtitle_expressive">Enjoy your new <xliff:g id="device" example="phone">%1$s</xliff:g>!</string>
    <string name="allset_navigation_settings_expressive"><annotation id="link">Choose how to navigate</annotation></string>
    <string name="allset_hint_expressive">Swipe up</string>
    <string name="allset_button_hint_expressive">Tap the home button</string>
    <string name="allset_device_type_tablet">tablet</string>
    <string name="allset_device_type_phone">phone</string>
    <string name="action_share">Share</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_split">Split</string>
    <string name="action_save_app_pair">Save app pair</string>
    <string name="toast_split_select_app">Tap another app to use split screen</string>
    <string name="toast_contextual_split_select_app">Choose another app to use split screen</string>
    <string name="toast_split_select_app_cancel">Cancel</string>
    <string name="toast_split_select_cont_desc">Exit split screen selection</string>
    <string name="toast_split_app_unsupported">Choose another app to use split screen</string>
    <string name="blocked_by_policy">This action isn\'t allowed by the app or your organization</string>
    <string name="split_widgets_not_supported">Widgets not currently supported, please select another app</string>
    <string name="accessibility_rotate_button">Rotate screen</string>
    <string name="taskbar_edu_swipe_animation_description">Animation showing how the taskbar comes into view from the bottom of the screen, and automatically hides when not in use</string>
    <string name="taskbar_edu_pinning_animation_description">Animation showing how to pin your taskbar using a toggle, so the taskbar remains permanently visible at the bottom of the screen</string>
    <string name="taskbar_edu_splitscreen">Drag an app to the side to use 2 apps at once</string>
    <string name="taskbar_edu_suggestions">Get app suggestions based on your routine</string>
    <string name="taskbar_edu_features">Do more with the Taskbar</string>
    <string name="taskbar_edu_done">Done</string>
    <string name="header_app_icon_description">App icon</string>
    <string name="header_default_app_title">App title</string>
    <string name="header_close_icon_description">Close button</string>
</resources>