<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2023 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidprv="http://schemas.android.com/apk/prv/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.TaskbarEduTooltip.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/taskbar_edu_features"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splitscreen_animation"
        android:layout_width="@dimen/taskbar_edu_features_lottie_width"
        android:layout_height="@dimen/taskbar_edu_features_lottie_height"
        android:layout_marginTop="@dimen/taskbar_edu_tooltip_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/splitscreen_text"
        style="@style/TextAppearance.TaskbarEduTooltip.Subtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/taskbar_edu_splitscreen"
        app:layout_constraintEnd_toEndOf="@id/splitscreen_animation"
        app:layout_constraintStart_toStartOf="@id/splitscreen_animation"
        app:layout_constraintTop_toBottomOf="@id/splitscreen_animation" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/settings_edu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="settings_animation,settings_text" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/settings_animation"
        android:layout_width="@dimen/taskbar_edu_features_lottie_width"
        android:layout_height="@dimen/taskbar_edu_features_lottie_height"
        android:layout_marginStart="@dimen/taskbar_edu_features_horizontal_spacing"
        android:layout_marginTop="@dimen/taskbar_edu_tooltip_vertical_margin"
        app:layout_constraintStart_toEndOf="@id/splitscreen_animation"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/taskbar_edu_settings" />

    <TextView
        android:id="@+id/settings_text"
        style="@style/TextAppearance.TaskbarEduTooltip.Subtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/taskbar_edu_settings_persistent"
        app:layout_constraintEnd_toEndOf="@id/settings_animation"
        app:layout_constraintStart_toStartOf="@id/settings_animation"
        app:layout_constraintTop_toBottomOf="@id/settings_animation" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/suggestions_animation"
        android:layout_width="@dimen/taskbar_edu_features_lottie_width"
        android:layout_height="@dimen/taskbar_edu_features_lottie_height"
        android:layout_marginStart="@dimen/taskbar_edu_features_horizontal_spacing"
        android:layout_marginTop="@dimen/taskbar_edu_tooltip_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/settings_animation"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/suggestions_text"
        style="@style/TextAppearance.TaskbarEduTooltip.Subtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/taskbar_edu_suggestions"
        app:layout_constraintEnd_toEndOf="@id/suggestions_animation"
        app:layout_constraintStart_toStartOf="@id/suggestions_animation"
        app:layout_constraintTop_toBottomOf="@id/suggestions_animation" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/edu_barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="splitscreen_text,settings_text,suggestions_text" />

    <Button
        android:id="@+id/done_button"
        style="@style/TaskbarEdu.Button.Next"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/taskbar_edu_done"
        android:textColor="?androidprv:attr/textColorOnAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edu_barrier_bottom" />
</merge>